# internal/presentation/rest/schemas/register.go
@@ -1,7 +1,6 @@
 package schemas
 
 type RegisterRequest struct {
-	Username string `json:"username"`
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
